--- a/cmsc424Site/templates/nav/investing.html
+++ b/cmsc424Site/templates/nav/investing.html
@@ -2,7 +2,27 @@
 {% block content %}
 <h1> Investing </h1>
 
+    <!-- List of uploaded documents -->
+    {% if documents %}
+        <ul>
+        {% for document in documents %}
+            <li><a href="{{ document.docfile.url }}">{{ document.docfile.name }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No documents.</p>
+    {% endif %}
 
-
+        <!-- Upload form. Note enctype attribute! -->
+        <form action="{% url "investing" %}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <p>{{ form.non_field_errors }}</p>
+            <p>{{ form.docfile.label_tag }} {{ form.docfile.help_text }}</p>
+            <p>
+                {{ form.docfile.errors }}
+                {{ form.docfile }}
+            </p>
+            <p><input type="submit" value="Upload" /></p>
+        </form>
 
 {% endblock %}
