--- a/cmsc424Site/templates/nav/investing.html
+++ b/cmsc424Site/templates/nav/investing.html
@@ -1,7 +1,23 @@
 {% extends "nav/base.html" %}
 {% block content %}
 <h1> Investing </h1>
+    
+    <h2>Simulate Investing</h2>
+    <p>Select an uploaded file to input investment data</p>
 
+    <!-- Selecting a file to input investment data -->
+    <form action="{% url "investing" %}" method= "post" enctype="multipart/form-data">
+        {% csrf_token %}
+    <p>{{ file_form.non_field_errors }}</p>
+        
+    <p>
+        {{ file_form.file_input.errors }}
+        {{ file_form.file_input }}
+    </p>
+    <input type="submit" name="invest" value="Make Investments" /></p>
+    </form>        
+        
+    <h2>File Uploader</h2>
     <!-- List of uploaded documents -->
     {% if documents %}
         <ul>
@@ -22,7 +38,9 @@
                 {{ form.docfile.errors }}
                 {{ form.docfile }}
             </p>
-            <p><input type="submit" value="Upload" /></p>
+            <p><input type="submit" name="uploadFile" value="Upload" /></p>
         </form>
+        
+        
 
 {% endblock %}
