working on reading investment file

--- a/cmsc424Site/templates/nav/investing.html
+++ b/cmsc424Site/templates/nav/investing.html
@@ -14,7 +14,8 @@
         {{ file_form.file_input.errors }}
         {{ file_form.file_input }}
     </p>
-    <input type="submit" name="invest" value="Make Investments" /></p>
+    <input type="submit" name="invest" value="Make Investments" />
+    <input type="submit" name="clear" value="Clear Investments" /></p>
     </form>        
         
     <h2>File Uploader</h2>
