Working on portfolios page

--- a/cmsc424Site/templates/nav/base.html
+++ b/cmsc424Site/templates/nav/base.html
@@ -21,6 +21,9 @@
 <a href="{% url 'investing' %}">investing</a>
 </td>
 <td>
+<a href="{% url 'portfolios' %}">portfolios</a>
+</td>
+<td>
 <a href="{% url 'queries' %}">queries</a>
 </td>
 <td>
